--- a/templates/data_render.html
+++ b/templates/data_render.html
@@ -13,9 +13,9 @@
         <h1>
             this is student name {{name}}
         </h1>
-        <h1>
-            this is the age of student {{age}}
-        </h1>
+ {% if age > 10 %}       
+  <h1>this is the age of student {{age}}</h1>
+ {% endif %}        
     </center>
     
 </body>
