--- a/templates/data_render.html
+++ b/templates/data_render.html
@@ -15,8 +15,13 @@
         </h1>
  {% if age > 10 %}       
   <h1>this is the age of student {{age}}</h1>
- {% endif %}        
+ {% endif %}     
+ <h1><a href=" {% url 'if_conditions' %}"> clike here to navigate </a></h1>
+ 
+ 
+
     </center>
+   
     
 </body>
 </html>
